--- a/css/style.css
+++ b/css/style.css
@@ -128,11 +128,23 @@ a {
   background-color: var(--secondary);
 }
 
-@media (max-width: 28.75em) {
+@media (max-width: 600px) {
   nav {
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
+  }
+  footer ul {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
   }
 }
 
