--- a/css/style.scss
+++ b/css/style.scss
@@ -121,9 +121,14 @@ a {
     }
 }
 
-@media (max-width: 28.75em) {
+@media (max-width: 600px) {
     nav {
         justify-content: center;
+    }
+    footer ul {
+        display: flex;
+        align-items: center;
+        flex-direction: column;
     }
 }
 
