--- a/css/style.scss
+++ b/css/style.scss
@@ -134,6 +134,10 @@ a {
 
 .welcome-section {
     background-color: var(--bg);
+    background-image: url('../img/bg.jpg');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-attachment: fixed;
     color: var(--white);
     height: 100vh;
     display: flex;
@@ -219,11 +223,26 @@ a {
                 visibility: visible;
             }
             transform: scale(1.01);
-            box-shadow: 0 2.8px 2.2px rgba(0, 0, 0, 0.034),
-            0 6.7px 5.3px rgba(0, 0, 0, 0.048),
-            0 12.5px 10px rgba(0, 0, 0, 0.06),
-            0 22.3px 17.9px rgba(0, 0, 0, 0.072),
-            0 41.8px 33.4px rgba(0, 0, 0, 0.086),
+            box-shadow: 0 2.8px 2.2px rgba(0,
+            0,
+            0,
+            0.034),
+            0 6.7px 5.3px rgba(0,
+            0,
+            0,
+            0.048),
+            0 12.5px 10px rgba(0,
+            0,
+            0,
+            0.06),
+            0 22.3px 17.9px rgba(0,
+            0,
+            0,
+            0.072),
+            0 41.8px 33.4px rgba(0,
+            0,
+            0,
+            0.086),
         }
     }
 }
@@ -254,13 +273,13 @@ footer {
             & a {
                 display: flex;
                 align-items: center;
+                display: flex;
             }
-            & i {
-                font-size: 3rem;
+            & svg {
                 margin-right: 1rem;
             }
             &:hover {
-                transform: translateY(1rem);
+                transform: translateY(-0.5rem);
             }
         }
     }
